<resources>
    <string name="app_name">eKrishiBazaar</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Select_your_State">Select your State</string>
    <string name="Select_your_District">Select your District</string>
    <string name="Select_your_Block">Select your Block</string>
    <string name="Next">Next</string>
    <string name="Buy_Order">Buy Order</string>
    <string name="More_Services">More Services</string>
    <string name="Buy_Back_Order">Buy Back Order</string>
    <string name="Find_Agriculture_Categories">Find Agriculture Categories</string>
    <string name="Your_Mobile_Number">Your Mobile Number *</string>
    <string name="Your_Password">Your Password *</string>
    <string name="Login">Login</string>
    <string name="Do_not_have_Account">Don\'t have Account ? Sign UP</string>
    <string name="Change_Location"><u>Change Location</u>.</string>
    <string name="view_privacy"><u>View Privacy Policy</u>.</string>
    <string name="Change_Profile_Picture"><u>Change Profile Picture</u>.</string>
    <string name="Delete"><u>Delete</u>.</string>
    <string name="Your_First_Name">Your First Name *</string>
    <string name="Your_Last_Name">Your Last Name *</string>
    <string name="Village_Name">Village Name *</string>
    <string name="Register">Register</string>
    <string name="Let_us_Provide_Information_about_your_area">Let us Provide Information about your area</string>
    <string name="No_Message_to_show">No Message(s) to show</string>
    <string name="Browse_Categories">Browse Categories</string>
    <string name="MY_ADS">MY ADS</string>
    <string name="PROFILE">PROFILE</string>
    <string name="HELP">HELP</string>
    <string name="My_Profile">My Profile</string>
    <string name="Settings">Settings</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="Hello">Hello</string>
    <string name="Are_you_sure_you_want_to_logout">Are you sure you want to logout !!</string>
    <string name="Already_have_account_Sign_In">Already have account. Sign In</string>
    <string name="Select_State">Select State</string>
    <string name="Select_District">Select District</string>
    <string name="Select_Block">Select Block</string>
    <string name="Notification">Notification</string>
    <string name="Sell">Sell</string>
    <string name="Sign_In">Sign In</string>
    <string name="I_have_read_Term_to_use_and_Privacy_Policy">I have read Term to use and Privacy Policy</string>
    <string name="Select_Product_Catgeory">Select Product Category</string>
    <string name="Select_Product">Select Product</string>
    <string name="Select_Product_Breed">Select Product Breed</string>
    <string name="Select_Product_Status">Select Product Status</string>
    <string name="Enter_Quantity">Enter Quantity</string>
    <string name="Select_UOM">Select UOM</string>
    <string name="Enter_Price">Enter Price</string>
    <string name="Packaging_Availability">Packaging Availability</string>
    <string name="Package_Type">Package Type</string>
    <string name="Who_will_pay_extra_charges">Who will pay extra charges</string>
    <string name="Additional_Information">Additional Information</string>
    <string name="Upload_Images">Upload Images</string>
    <string name="Submit">Submit</string>
    <string name="Post_Ads">Post Ads</string>
    <string name="Select_Cattle_Type">Select Cattle Type</string>
    <string name="Select_Cattle_Breed">Select Cattle Breed</string>
    <string name="Number_of_Births">Number of Births</string>
    <string name="Milk_Produced_Per_Day">Milk Produced Per Day</string>
    <string name="Preganent">Preganent</string>
    <string name="Preganency_Month">Preganency Month</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="Actual_Price">Actual Price</string>
    <string name="Offer_Price">Offer Price</string>
    <string name="Make_Offer">Make Offer</string>
    <string name="View_Profile">View Profile</string>
    <string name="Profile_Details">Profile Details</string>
    <string name="Location_Details">Location Details</string>
    <string name="Product_Details">Product Details</string>
    <string name="chat">Chat</string>
    <string name="about_us">Nowadays everyone talks about farmers, to increase their income. And as a solution for this, they have two ways, first, increase MSP and second, increase yields but we do not consider both these as complete solutions. We believe that the farmer needs a middleman free market, where he can get his crop sold at his cost. Rural market should be made more powerful and digital so that farmers like cities not only have information but also have a competitive market where they can sell their crops, and buy the goods they need. We have often seen in the village That is very similar to that which is not of the use of the retainer, yet due to lack of proper facility to resell, Former cannot sell it while such a farmer who needs him cannot buy it for lack of information and he has to go to the market and have to fix a higher price due to taking a new one. EKRISHIBAZAAR is the solution to all such problems.</string>
    <string name="Update_Mobile_Number">Update Mobile Number</string>
    <string name="Change_Passsword">Change Passsword</string>
    <string name="User_Description">User Description</string>
    <string name="Update">Update</string>
    <string name="New_Password">New Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Description">Description</string>
    <string name="Save">Save</string>
    <string name="Ads_Not_Found">Ads Not Found</string>
    <string name="Account_Settings">Account Settings</string>
    <string name="Show_Mobile_Number">Show Mobile Number</string>
    <string name="My_Offers">My Offers</string>
    <string name="My_Account">My Account</string>
    <string name="offers_not_found">offers not found</string>
    <string name="ad_mob_app_id">ca-app-pub-3214240622497232~9733811214</string>
    <string name="banner_ads_id">ca-app-pub-3214240622497232/5112055838</string>
</resources>