<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <!--    <item-->
    <!--        android:id="@+id/navigation_chat"-->
    <!--        android:icon="@drawable/chat"-->
    <!--        android:title="CHAT" />-->

    <item
        android:id="@+id/navigation_my_adds"
        android:icon="@drawable/advertisement"
        android:title="@string/MY_ADS" />

    <item
        android:id="@+id/navigation_myaccount"
        android:icon="@drawable/account"
        android:title="@string/PROFILE" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/sell"
        android:title="@string/HELP" />
</menu>