<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfileActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/Account_Settings"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profile_imageview"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/farmer" />

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Piyush Shukla"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp">

                <TextView
                    android:id="@+id/change_profile_pic_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/Change_Profile_Picture"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/delete_profile_pic_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/Delete"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_10sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/update_mobile_relative"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/scan_cardview"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/light_gray3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/Update_Mobile_Number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/mobile_up_imageview"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/up_arrow"
                    app:tint="@color/dark_green" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/update_mobile_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customize_relative"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"

                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile_number_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Mobile_Number"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:textSize="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/update_btn"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/corner_round_btn_shape"
                    android:text="@string/Update"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/privacy_textview" />

            </LinearLayout>

            <!--            /2nd-->

            <RelativeLayout
                android:id="@+id/change_password_relative"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/scan_cardview"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/light_gray3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/Change_Passsword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/change_password_up_imageview"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/up_arrow"
                    app:tint="@color/dark_green" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/update_passwordLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customize_relative"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/New_Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmpassword_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Confirm_Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/update_password_pasword_btn"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/corner_round_btn_shape"
                    android:text="@string/Update"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/privacy_textview" />

            </LinearLayout>

            <!--            3rd-->

            <RelativeLayout
                android:id="@+id/update_user_description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/scan_cardview"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/light_gray3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/User_Description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/user_desc_imageview"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/up_arrow"
                    app:tint="@color/dark_green" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/descLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customize_relative"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Description"
                        android:maxLines="1"
                        android:textSize="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/save_desc_btn"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/corner_round_btn_shape"
                    android:text="@string/Save"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/privacy_textview" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/show_mobile_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Show_Mobile_Number"
                android:layout_margin="@dimen/_10sdp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
